File path now correct

--- a/src/main/java/com/example/TPXProj/Index.html
+++ b/src/main/java/com/example/TPXProj/Index.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<!DOCTYPE html>"
+<html>
+    <head>
+        <title> Nonprofit Homepage</title>
+        <link rel=\"stylesheet\" href=\"style.css\">
+    </head>
+    <body>
+        <h1> This is where the header for the awareness page will be </h1>
+        <img src=\"child.png\" />
+        <p> Data invoking peoples pathos </p>
+        <img src=\"puppies.jpg\"/>
+        <p> Data invoking peoples ethos </p>
+        <img src=\"food.jpg\"/>
+        <p> Data invoking peoples logos
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href=\"Questionaire.html\">
+        <button type=\"button\" onclick=\"Volunteer()\"> Match Me With A Nonprofit! </button>
+        </a>
+        <br>
+        <br>
+        <a href=\"Questionaire2.html\">
+        <button type=\"button\" onclick=\"Nonprofit()\"> Register Your Nonprofit </button>
+        </a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer> Property of Nonprofit Team 3 </footer>
+    </body>
 </html>
