--- a/src/main/java/com/example/TPXProj/html/index.html
+++ b/src/main/java/com/example/TPXProj/html/index.html
@@ -20,9 +20,9 @@
 
 <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/skeleton.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="src/main/java/com/example/TPXProj/css/normalize.css">
+<link rel="stylesheet" href="src/main/java/com/example/TPXProj/css/skeleton.css">
+<link rel="stylesheet" href="src/main/java/com/example/TPXProj/css/style.css">
 
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
