--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -58,7 +58,7 @@
 <!-- QUESTIONNAIRE SECTION --> 
 <section>
     <div class="container">
-        <form action="volunteer.php" name="Volunteer Questionnaire" method="post">
+        <form action="nonprofit.php" name="Nonprofit Questionnaire" method="post">
         
         Name of Nonprofit: <input type="text" name="Name">
             
