Updating with data viz

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,19 +59,19 @@
 <!-- NONPROFITS SECTION --> 
 <section>
     <div class="container">
-    <div class="five columns">
+    <div class="three columns">
         <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
         <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
         <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
         <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
     </div>
-    <div class="five columns">
+    <div class="three columns">
         <h3>Second Helpings</h3>
-        <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
+        <p class="imgtext">Second Helpings accepts donated food to prepare nutritious meals every day, and distributes them free of charge through local social service agencies in Greater Indianapolis. Second Helpings also trains unemployed adults for careers in the culinary industry.</p>
         <h3>Horizon House</h3>
         <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services.</p>
         <h3>Boys and Girls Club</h3>
-        <p class="imgtext">The mission of Boys & Girls Clubs of America is to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
+        <p class="imgtext">The Boys & Girls Clubs of America aims to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
         <h3>Indiana Black Expo</h3>
         <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
     </div>
