Added data viz images

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,13 +67,19 @@
     </div>
     <div class="three columns">
         <h3>Second Helpings</h3>
-        <p class="imgtext">Second Helpings accepts donated food to prepare nutritious meals every day, and distributes them free of charge through local social service agencies in Greater Indianapolis. Second Helpings also trains unemployed adults for careers in the culinary industry.</p>
+        <p class="imgtext">Second Helpings accepts donated food to prepare nutritious meals every day, and distributes them free of charge. Second Helpings also trains unemployed adults for careers in the culinary industry.</p>
         <h3>Horizon House</h3>
         <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services.</p>
         <h3>Boys and Girls Club</h3>
         <p class="imgtext">The Boys & Girls Clubs of America aims to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
         <h3>Indiana Black Expo</h3>
         <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
+    </div>
+    <div class="three columns">
+        <img class="icon" src="images/foodpile.png" alt="Food Icon">
+        <img class="icon" src="images/services.png" alt="Services Icon">
+        <img class ="icon" src="images/youth.png" alt="Youth Icon">
+        <img class ="icon" src="images/money.png" alt="Money Icon">
     </div>
         <div class="row">
            <button class="clickme2"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>  
