--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -50,7 +50,7 @@
   <header class="container">
     <div class="row header">
         <h2>Thank you for your interest in registering your nonprofit!</h2>
-        <h4>Fill out this questionnaire highlighting the needs of your nonprofit organization. Be as specific as possible in order for volunteers to be matched accordingly.</h4> 
+        <h4 class="smaller">Fill out this questionnaire highlighting the needs of your nonprofit organization. Be as specific as possible in order for volunteers to be matched accordingly.</h4> 
     </div>   
  </header>
 </section>
