--- a/src/main/webapp/volunteer.html
+++ b/src/main/webapp/volunteer.html
@@ -50,7 +50,7 @@
   <header class="container">
     <div class="row header">
         <h2>Thank you for your interest in volunteering!</h2>
-        <h4 class="smaller">Fill out this questionnaire to be immediately matched with 5 nonprofit volunteer opportunities that are catered to your interests, skills, and availability. Be as specific as possible in order to be matched accordingly.</h4> 
+        <h6>Fill out this questionnaire to be immediately matched with 5 nonprofit volunteer opportunities that are catered to your interests, skills, and availability. Be as specific as possible in order to be matched accordingly.</h6> 
     </div>   
  </header>
 </section>
