adding submit page

--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -128,7 +128,7 @@
         <br>Anything else we should know about your nonprofit organization?<br>
             <textarea rows="2" cols="100"></textarea>
            
-        <br><input type="submit" value="Submit."/>
+        <br><br><input type="submit" value="Submit." a href="nonprofit_submit.html"/>
         
         </form>
     </div>
