--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,10 +76,10 @@
         <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
     </div>
     <div class="three columns">
-        <img class="icon" src="images/foodpile.png" alt="Food Icon">
-        <img class="icon" src="images/services.png" alt="Services Icon">
-        <img class ="icon" src="images/youth.png" alt="Youth Icon">
-        <img class ="icon" src="images/money.png" alt="Money Icon">
+        <img class="data" src="images/foodpile.png" alt="Food Icon">
+        <img class="data" src="images/services.png" alt="Services Icon">
+        <img class ="data" src="images/youth.png" alt="Youth Icon">
+        <img class ="data" src="images/money.png" alt="Money Icon">
     </div>
         <div class="row">
            <button class="clickme2"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>  
