seeing what changing it to rows does

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,27 +59,30 @@
 <!-- NONPROFITS SECTION --> 
 <section>
     <div class="container">
-    <div class="three columns">
-        <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
-        <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
-        <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
-        <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
-    </div>
-    <div class="three columns">
+    <div class="row secondhelpings">
+        <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">  
         <h3>Second Helpings</h3>
         <p class="imgtext">Second Helpings accepts donated food to prepare nutritious meals every day, and distributes them free of charge. Second Helpings also trains unemployed adults for careers in the culinary industry.</p>
+        <img class="icon" src="images/foodpile.png" alt="Food Icon">    
+    </div>
+    <div class="row horizonhouse">
+        <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">   
         <h3>Horizon House</h3>
         <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services.</p>
+        <img class="icon" src="images/services.png" alt="Services Icon">
+    </div>   
+    <div class="row boysandgirls">
+        <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">   
         <h3>Boys and Girls Club</h3>
         <p class="imgtext">The Boys & Girls Clubs of America aims to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
+        <img class ="icon" src="images/youth.png" alt="Youth Icon">
+    </div> 
+    <div class="row ibe">
+        <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">    
         <h3>Indiana Black Expo</h3>
         <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
+        <img class ="icon" src="images/money.png" alt="Money Icon">
     </div>
-    <div class="three columns">
-        <img class="data" src="images/foodpile.png" alt="Food Icon">
-        <img class="data" src="images/services.png" alt="Services Icon">
-        <img class ="data" src="images/youth.png" alt="Youth Icon">
-        <img class ="data" src="images/money.png" alt="Money Icon">
     </div>
         <div class="row">
            <button class="clickme2"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>  
