Volunteer Sumbmission Page

--- a/src/main/webapp/volunteer.html
+++ b/src/main/webapp/volunteer.html
@@ -118,7 +118,7 @@
         <input type="radio" name="Southeast" value="Southeast"> Southeast <br>
         <input type="radio" name="Southwest" value="Southwest"> Southwest <br>
         
-        <br><input type="submit" value="Submit."/>
+        <br><a href="VolunteerSubmissionPage.html"><input type="submit" value="Submit."/> </a>
         
         </form>
     </div>
