--- a/src/main/webapp/VolunteerSubmissionPage.html
+++ b/src/main/webapp/VolunteerSubmissionPage.html
@@ -6,7 +6,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Benefit Indiana - Nonprofit Questionnaire</title>
+<title>Benefit Indiana - Match Page</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
