--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,13 +59,13 @@
 <!-- NONPROFITS SECTION --> 
 <section>
     <div class="container">
-    	<div class="three columns">
+    	<div class="four columns">
             <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
             <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
        	    <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
        	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
     	</div>
-        <div class="three columns">
+        <div class="four columns">
             <h3>Second Helpings</h3>
             <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
             <h3>Horizon House</h3>
@@ -75,7 +75,7 @@
             <h3>Indiana Black Expo</h3>
             <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
         </div>
-   	    <div class="three columns">
+   	    <div class="four columns">
             <img class="icon" src="images/foodpile.png" alt="Second Helpings Icon">
             <img class="icon" src="images/services.png" alt="Horizon House Icon">
        	    <img class ="icon" src="images/youth.png" alt="Boys and Girls Club Icon">
