--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,16 +70,17 @@
             <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
             <h3>Horizon House</h3>
             <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services.</p>
+            <br><br><br><br>
             <h3>Boys and Girls Club</h3>
             <p class="imgtext">The mission of Boys & Girls Clubs of America is to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
             <h3>Indiana Black Expo</h3>
             <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
         </div>
    	    <div class="four columns">
-            <img class="icon" src="images/foodpile.png" alt="Second Helpings Icon">
-            <img class="icon" src="images/services.png" alt="Horizon House Icon">
-       	    <img class ="icon" src="images/youth.png" alt="Boys and Girls Club Icon">
-       	    <img class ="icon" src="images/money.png" alt="Indiana Black Expo Icon">  
+            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
+            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
+       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
+       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">  
         </div>
         
     </div>
