added more to descriptions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,7 +69,7 @@
             <h3>Second Helpings</h3>
             <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
             <h3>Horizon House</h3>
-            <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services.</p>
+            <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services. They provide a safe place and basic services as they take steps towards a more stable life. </p>
             <br><br>
             <h3>Boys and Girls Club</h3>
             <p class="imgtext">The mission of Boys & Girls Clubs of America is to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
