nonprofit submission page

--- a/src/main/webapp/nonprofit_submit.html
+++ b/src/main/webapp/nonprofit_submit.html
@@ -42,16 +42,16 @@
         <div class="six columns">
             <h1>Benefit Indiana</h1>
         </div>
-        <button class="clickme1"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>
+        <button class="clickme1"><a href="index.html">Return Home</a></button>
     </div> 
  </nav>
 
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
-        <h2>Looking to give back to a local Indiana nonprofit?</h2>
-        <h4>With the help of our all-encompassing volunteer matchmaker tool, get paired with a nonprofit fit just for you!</h4> 
-        <img class="image-overlay" src="images/headpic.png" alt="Volunteering Icon">
+        <h2>Thank you!</h2>
+        <h4>Your information was submittied successfully. <br>
+        You will be hearing from us shortly in your email inbox.</h4> 
     </div>   
  </header>
 </section>
