--- a/src/main/webapp/VolunteerSubmissionPage.html
+++ b/src/main/webapp/VolunteerSubmissionPage.html
@@ -1,4 +1,3 @@
-<html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Benefit Indiana - Match Page</title>
+<title>Benefit Indiana - Volunteer Matches</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -21,16 +20,16 @@
 
 <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/skeleton.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/normalize.css">
+<link rel="stylesheet" href="../css/skeleton.css">
+<link rel="stylesheet" href="../css/style.css">
 
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-    
+
 <body>
 
 <!-- Primary Page Layout
@@ -49,8 +48,8 @@
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
-        <h2>You personalized Nonprofit Matches!</h2>
-        <h6>Please explore your matches!</h6> 
+        <h2>Thank you for your interest in volunteering!</h2>
+        <h4>Please explore your matches and sign up at your convenience!</h4> 
     </div>   
  </header>
 </section>
