--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,7 @@
   <nav class="container">
     <div class="row navigation">
         <div class="six columns">
-            <h1>Benefit Indiana</h1>
+            <h1><a href="index.html">Benefit Indiana</a></h1>
         </div>
         <button class="clickme1"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>
     </div> 
