added links to footer

--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -40,7 +40,7 @@
   <nav class="container">
     <div class="row navigation">
         <div class="six columns">
-            <h1>Benefit Indiana</h1>
+            <h1><a href="index.html">Benefit Indiana</a></h1>
         </div>
         <button class="clickme1"><a href="index.html">Return Home</a></button>
     </div> 
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="row footer">
             <div class="three columns">
-                <h1>Benefit Indiana</h1>
+                <h1><a href="index.html">Benefit Indiana</a></h1>
             </div>
             <h5>Created for TechPoint S.O.S. Challenge</h5>
         </div>
