--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -97,7 +97,7 @@
     <div class="container">
         <div class="row footer">
             <div class="three columns">
-                <h1>Benefit Indiana</h1>
+                <h1><a href="index.html">Benefit Indiana</a></h1>
             </div>
             <h5>Created for TechPoint S.O.S. Challenge</h5>
         </div>
