testing the css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
-        <h2>Looking to give back to a local Indiana nonprofit? SHELBY</h2>
+        <h2>Looking to give back to a local Indiana nonprofit?</h2>
         <h4>With the help of our all-encompassing volunteer matchmaker tool, get paired with a nonprofit fit just for you!</h4> 
         <img class="image-overlay" src="images/headpic.png" alt="Volunteering Icon">
     </div>   
