Fixed some website malfunctions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,10 +84,10 @@
         
     </div>
     <div class="row">
-        <button class="clickme2"><a href="volunteer.html">Match me with volunteer opportunities!</a></button>  
+        <a href="volunteer.html"><button class="clickme2">Match me with volunteer opportunities!</button></a>
     </div>
     <div class="row">
-        <button class="clickme3"><a href="nonprofit.html">Are you a nonprofit? Register here.</a></button>  
+        <a href="nonprofit.html"><button class="clickme3">Are you a nonprofit? Register here.</button> </a>
     </div>
     </div>
 </section>
