--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,10 +57,10 @@
 <section>
     <div class="container">
     	<div class="four columns">
-        	<img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
-        	<img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
-       	 <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
-       	 <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
+        	<p> 1. <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon"> </p>
+        	<p>2. <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon"> </p>
+       	<p> 3. <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon"> </p>
+       	<p> 4. <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon"> </p>
     	</div>
     	<div class="four columns">
       	  <h3>Second Helpings</h3>
