--- a/src/main/webapp/volunteer.html
+++ b/src/main/webapp/volunteer.html
@@ -118,7 +118,9 @@
         <input type="radio" name="location" value="7"> Southeast <br>
         <input type="radio" name="location" value="8"> Southwest <br>
         
-        <br><input type="submit" value="Submit"/>
+        <br><button><a href="volunteer-submit.html">Submit</a></button>
+            
+        <!--<input type="submit" value="Submit"/> -->
 
         </form>
     </div>
