trying to format volunteer page

--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -55,28 +55,39 @@
 </section>
 <!-- NONPROFITS SECTION --> 
 <section>
-    <div class="container">
+ <div class="container">
     	<div class="four columns">
-        	<p> 1. <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon"> </p>
-        	<p>2. <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon"> </p>
-       	<p> 3. <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon"> </p>
-       	<p> 4. <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon"> </p>
+            <img class="icon" src="images/gleaners.png" alt="Gleaners Icon">
+            <img class="icon" src="images/earlylearning.png" alt="Early Learning Icon">
+       	    <img class ="icon" src="images/inhp.png" alt="INHP Icon">
+       	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
     	</div>
-    	<div class="four columns">
-      	  <h3>Second Helpings</h3>
-      	  <h3>Horizon House</h3>
-      	  <h3>Boys and Girls Club</h3>
-      	  <h3>Indiana Black Expo</h3>
-  	  </div>
-  	  <div class="four columns">
-  	  	 <div class="row">
-           <button class="clickme2"><a href="https://www.google.com">Donate</a></button>  
+        <div class="four columns">
+            <h3>Gleaners Food Bank of Indiana</h3>
+            <p class="imgtext">Food <br> Indianapolis, IN</p>
+            <h3>Early Learning Indiana</h3>
+            <p class="imgtext">Education <br> Indianapolis, IN</p>
+            <h3>Indianapolis Neighborhood Housing Partnership</h3>
+            <p class="imgtext">Homeless <br> Indianapolis, IN</p>
+            <h3>Other</h3>
+            <p class="imgtext">Other <br> Indianapolis, IN</p>
         </div>
-        <div class="row">
-            <button class="clickme3"><a href="https://www.google.com">Volunteer</a></button>  
+   	    <div class="four columns">
+            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
+            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
+       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
+       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">  
         </div>
-  	  </div>
-
+        
+    </div>
+    <div class="row">
+        <a href="volunteer.html"> <button class="clickme2">Match me with volunteer opportunities!</button> </a>
+    </div>
+    <div class="row">
+        <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
+    </div>
+    </div>
+</section>
 
 <footer>
     <div class="container">
