--- a/src/main/webapp/volunteer.html
+++ b/src/main/webapp/volunteer.html
@@ -62,7 +62,7 @@
         
         How can you best contribute?<br>
         <br>
-        <input type="checkbox" name="contribution" value="0"> Volunteering <br>
+        <input type="radio" name="contribution" value="0"> Volunteering <br>
         <input type="radio" name="contribution" value="1"> Money <br>
         <input type="radio" name="contribution" value="2"> Donation of Goods <br>
             
