Trying to get matching algorithm to work

--- a/src/main/webapp/volunteer.html
+++ b/src/main/webapp/volunteer.html
@@ -58,7 +58,7 @@
 <!-- QUESTIONNAIRE SECTION --> 
 <section>
     <div class="container">
-        <form action="volunteer-results" name="Volunteer Questionnaire" method="post">
+        <form action="/volunteer-submit.html" name="Volunteer Questionnaire" method="post">
         
         How can you best contribute?<br>
         <br>
