--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -63,8 +63,8 @@
        	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
     	</div>
         <div class="four columns">
-            <h3>[Name1]</h3>
-            <p class="imgtext">[Activities1] <br> [Location1] IN</p>
+            <h3>[name1]</h3>
+            <p class="imgtext">[activities1] <br> [location1] IN</p>
             <h3>Early Learning Indiana</h3>
             <p class="imgtext">Education <br> Indianapolis, IN</p>
             <h3>Indianapolis Neighborhood Housing Partnership</h3>
