--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,35 +57,29 @@
 <section>
  <div class="container">
     	<div class="four columns">
-            <img class="icon" src="images/gleaners.png" alt="Gleaners Icon">
-            <img class="icon" src="images/earlylearning.png" alt="Early Learning Icon">
-       	    <img class ="icon" src="images/inhp.png" alt="INHP Icon">
-       	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
+            <h7>Gleaners Food Bank of Indiana</h7>
+            <h7>Early Learning Indiana</h7>
+       	    <h7>Indianapolis Neighborhood Housing Partnership</h7>
+            <h7>Girls Inc.</h7>
     	</div>
         <div class="four columns">
-            <h3>Gleaners Food Bank of Indiana</h3>
-            <p class="imgtext">Food <br> Indianapolis, IN</p>
-            <h3>Early Learning Indiana</h3>
-            <p class="imgtext">Education <br> Indianapolis, IN</p>
-            <h3>Indianapolis Neighborhood Housing Partnership</h3>
-            <p class="imgtext">Homeless <br> Indianapolis, IN</p>
-            <h3>Other</h3>
-            <p class="imgtext">Other <br> Indianapolis, IN</p>
+            <p class="imgtext">Food <br> Central Indiana</p>
+            <p class="imgtext">Education <br> Central Indiana</p>
+            <p class="imgtext">Homeless <br> Central Indiana</p>
+            <p class="imgtext">Children <br> Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
-            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
-       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
-       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">  
+            <a href="https://www.gleaners.org"><button class="signup">Sign-Up</button>
+            <a href="https://earlylearningin.org"><button class="signup">Sign-Up</button>
+            <a href="https://www.inhp.org"><button class="signup">Sign-Up</button>
+            <a href="https://girlsincindy.org"><button class="signup">Sign-Up</button>   
         </div>
-        
     </div>
     <div class="row">
         <a href="volunteer.html"> <button class="clickme2">Match me with volunteer opportunities!</button> </a>
     </div>
     <div class="row">
         <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
-    </div>
     </div>
 </section>
 
