volunteer sub page

--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -63,10 +63,10 @@
             <h7>Girls Inc.</h7>
     	</div>
         <div class="four columns">
-            <p class="imgtext">Food <br> Central Indiana</p>
-            <p class="imgtext">Education <br> Central Indiana</p>
-            <p class="imgtext">Homeless <br> Central Indiana</p>
-            <p class="imgtext">Children <br> Central Indiana</p>
+            <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Education <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Homeless <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Children <br> Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
             <a href="https://www.gleaners.org"><button class="signup">Sign-Up</button>
