--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,10 +57,10 @@
 <section>
  <div class="container">
     	<div class="four columns">
-            <h7>Gleaners Food Bank of Indiana</h7>
-            <h7>Early Learning Indiana</h7>
-       	    <h7>Indianapolis Neighborhood Housing Partnership</h7>
-            <h7>Girls Inc.</h7>
+            <h7 class="match">1. Gleaners Food Bank of Indiana</h7>
+            <h7 class="match">2. Early Learning Indiana</h7>
+       	    <h7 class="match">3. Indianapolis Neighborhood Housing Partnership</h7>
+            <h7 class="match">4. Girls Inc.</h7>
     	</div>
         <div class="four columns">
             <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
